# pyoptram

./: .gitignore  README.md  convertion_plan.md  migration_plan.md  pyproject.toml
.github/workflows/: tests.yml
examples/: yuma_pipeline_example.py
pyoptram/: __init__.py  acquire  acquire.py  ndvi_str.py  soil_moisture.py  str_transform_calculations.py  trapezoid.py
pyoptram/tests/: test_acquire.py
tests/: test_acquire.py  test_ndvi_str.py  test_str.py  test_trapezoid.py
