[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoptram"
version = "0.1.0"
description = "Python implementation of the OPTRAM soil moisture model"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "rasterio",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyoptram*"]
